# TaggingYahooWithBow

./: README.md  main.py  pyproject.toml
mlartifacts/0/models/m-a11489aa720b4d1691e821baa36c4157/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  serving_input_example.json
test/: bow.ipynb
