[project]
name = "taggingyahoowithbow"
version = "0.1.0"
description = "Yahoo Tagger"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
]
